2003-05-08    <drew@loki.sai-office>

	* SkunkWeb/util/precompile.py.in (func): now continues if a
	compilation fails

	* SkunkWeb/swpython.py.in (SkunkWebPath): now ignores sigchild by
	default like regular python does

	* configure.in: now fails and exits if python is not found

	* SkunkWeb/SkunkWeb/Server.py (addService): fix for HP/UX because it 
	doesn't have seteuid

	* SkunkWeb/swmgr.in: put quotes around $FAST to fix shell errors
	and uses @SHELL@ instead of @BASH@ (not all of us are that
	fortunate to be working on working OS's)

2003-05-07    <drew@loki.sai-office>

	* pylibs/AE/Cache.py (_dtCompileFunc): added noTagDebug option

2003-05-06  Jacob Smullyan  <smulloni@smullyan.org>

	* pylibs/jsutils.py: added simple module for marshalling
	literal Python data into Javascript.

2003-05-06    <drew@loki.sai-office>

	* configure: regenerated

	* configure.in: configure now stops if eGenix mxBase isn't installed

	* docs/opman.xml, docs/opman.txt: removed, refers to skunk-2.70!

	* docs/opman/opman.tex: added Frank's MailServices update and made
	a few other changes.

2003-05-05  Jacob Smullyan  <smulloni@smullyan.org>

	* pylibs/SkunkExcept.py (SkunkSyntaxError.format): stopped
	building up strings through multiple concatenations.

2003-05-05    <drew@loki.sai-office>

	* SkunkWeb/Services/templating/MailServices.py: big and better update
	from Frank Tegtmeyer

2003-05-04  Jacob Smullyan  <smulloni@smullyan.org>

	* pylibs/PyPgSQLcache.py: typo fixes.

	* SkunkWeb/Services/pypgsqlcache.py: typo fix.

2003-05-02    <drew@loki.sai-office>

	* SkunkWeb/Services/web/protocol.py (HTTPConnection.response): 
	fix for stupidity error

2003-05-02  Jacob Smullyan  <jsmullyan@wnyc.org>

	* INSTALL (systems): added to list of supported OSes.

2003-05-02    <drew@loki.sai-office>

	* SkunkWeb/Services/web/protocol.py (HTTPConnection.response): now 
	supports byte range requests.

	* SkunkWeb/sw.conf.in: added the long unmentioned 